--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>test</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app1"></div>
+    <div>12312312312312312</div>
     <!-- built files will be auto injected -->
   </body>
 </html>
